# dodopizza-be

./: .cz.yaml  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
fixtures/: 1-categories.json  2 ingredients.json  2-ingredients.json  3 products.json  3-products.json  4 variations.json  4-variations.json  5-variationtoingredient.json  categories.json  ingredients.json  products.json
nginx/: default.conf.template
requirements/: base.txt  dev.txt
scripts/: api.sh  run_tests.sh  tests.sh
src/apps/: exceptions.py
src/apps/access/: apps.py  constants.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
src/apps/access/admin/: __init__.py  actions.py  admin.py  filters.py
src/apps/access/migrations/: 0001_initial.py
src/apps/access/tests/: base.py  test_access_for_all_urls.py  test_middleware.py  test_send_emails.py  test_serializers.py  test_utils.py  test_views.py
src/apps/catalog/: constants.py  pagination.py  querysets.py  services.py  urls.py
src/apps/catalog/admin/: __init__.py  category.py  ingredient.py  product.py  (+1 more)
src/apps/services/: email.py
src/config/: urls.py
src/config/middleware/: count_bd_request.py
src/config/settings/: __init__.py  django_apps.py  django_auth.py  django_caches.py  django_db.py  django_general.py  django_i18n.py  django_logging.py  django_middleware.py  django_static.py  django_templates.py  email.py  rest_framework.py  spectacular.py
(+264 files in other folders)
