[project]
name = "ДОДО ПИЦЦА"
description = "Самая вкусная пицца на свете"
version = "0.2.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
version_files = [
    "pyproject.toml:project.version"
]
update_changelog_on_bump = true
major_version_zero = true
